--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-body{
+/* body{
   margin: 0;
   background-color: black;
   justify-content: center;
@@ -70,3 +70,78 @@ fieldset{
     margin-left:33%;
   }
 }
+
+@media screen and (min-width: 1920px) {
+  fieldset{
+    margin-left: 45%;
+    margin-top:5%;
+  }
+
+  .lugar{
+    margin-left:45%;
+    margin-top:0.5%;
+  }
+
+  .Selecionar{
+    margin-left:45%;
+    margin-top:0.5%;
+  }
+
+  .final{
+    margin-left:45%;
+    margin-top:0.5%;
+  }
+
+  .button{
+    margin-left:47%;
+  } */
+
+  .login-form {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    justify-content: center;
+  }
+  
+  .login__header {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 50px;
+  }
+  
+  .login__header h1 {
+    color: #333;
+    font-size: 1.5em;
+  }
+  
+  .login__input {
+    border: 2px solid #333;
+    border-radius: 8px;
+    color: #333;
+    font-size: 1em;
+    margin-bottom: 15px;
+    max-width: 300px;
+    outline: none;
+    padding: 15px;
+    width: 100%;
+  }
+  
+  .login__button {
+    background-color: #ee665c;
+    border-radius: 8px;
+    color: #fff;
+    cursor: pointer;
+    font-size: 1em;
+    max-width: 300px;
+    padding: 15px;
+    width: 100%;
+  }
+  
+  .login__button:disabled {
+    background-color: #eee;
+    color: #aaa;
+    cursor: auto;
+  }
