--- a/site.css
+++ b/site.css
@@ -168,3 +168,23 @@ body{
     width:287px;
   }
 }
+
+header {
+  background-color: rgba(210, 20, 20, 0.8);
+  width:300px;
+  height:20px;
+  border-radius: 5px;
+}
+
+.player{
+  color:black;
+}
+
+@media screen and (min-width:1920px){
+
+  .titulo{
+   margin-top:0.5%;
+   margin-left:17%;
+  }
+
+}
