--- a/site.css
+++ b/site.css
@@ -188,3 +188,10 @@ header {
   }
 
 }
+
+@media screen and (min-width:320px) and (max-width:768px){
+  header{
+    margin-top:15%;
+    width:250px
+  }
+}
